{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 231,
  "lineage": "d7ccf48b-faf5-1b05-20a8-b351b56356b4",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "authentication_certificate": [],
            "autoscale_configuration": [
              {
                "max_capacity": 10,
                "min_capacity": 1
              }
            ],
            "backend_address_pool": [
              {
                "fqdns": [],
                "id": "/subscriptions/b2af20ad-98fa-4aa7-94c3-059663641d9f/resourceGroups/rg-prod-aks101-eus2-001/providers/Microsoft.Network/applicationGateways/agw-main-prod-eus2-001/backendAddressPools/nginx-backend-pool",
                "ip_addresses": [
                  "10.240.0.100"
                ],
                "name": "nginx-backend-pool"
              }
            ],
            "backend_http_settings": [
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [
                  {
                    "drain_timeout_sec": 300,
                    "enabled": true
                  }
                ],
                "cookie_based_affinity": "Disabled",
                "host_name": "",
                "id": "/subscriptions/b2af20ad-98fa-4aa7-94c3-059663641d9f/resourceGroups/rg-prod-aks101-eus2-001/providers/Microsoft.Network/applicationGateways/agw-main-prod-eus2-001/backendHttpSettingsCollection/nginx-backend-http-settings",
                "name": "nginx-backend-http-settings",
                "path": "/",
                "pick_host_name_from_backend_address": false,
                "port": 80,
                "probe_id": "/subscriptions/b2af20ad-98fa-4aa7-94c3-059663641d9f/resourceGroups/rg-prod-aks101-eus2-001/providers/Microsoft.Network/applicationGateways/agw-main-prod-eus2-001/probes/nginx-health-probe",
                "probe_name": "nginx-health-probe",
                "protocol": "Http",
                "request_timeout": 60,
                "trusted_root_certificate_names": []
              },
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [
                  {
                    "drain_timeout_sec": 300,
                    "enabled": true
                  }
                ],
                "cookie_based_affinity": "Disabled",
                "host_name": "",
                "id": "/subscriptions/b2af20ad-98fa-4aa7-94c3-059663641d9f/resourceGroups/rg-prod-aks101-eus2-001/providers/Microsoft.Network/applicationGateways/agw-main-prod-eus2-001/backendHttpSettingsCollection/nginx-backend-https-settings",
                "name": "nginx-backend-https-settings",
                "path": "/",
                "pick_host_name_from_backend_address": false,
                "port": 443,
                "probe_id": "/subscriptions/b2af20ad-98fa-4aa7-94c3-059663641d9f/resourceGroups/rg-prod-aks101-eus2-001/providers/Microsoft.Network/applicationGateways/agw-main-prod-eus2-001/probes/nginx-health-probe-https",
                "probe_name": "nginx-health-probe-https",
                "protocol": "Https",
                "request_timeout": 60,
                "trusted_root_certificate_names": []
              }
            ],
            "custom_error_configuration": [],
            "enable_http2": false,
            "fips_enabled": false,
            "firewall_policy_id": "",
            "force_firewall_policy_association": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/b2af20ad-98fa-4aa7-94c3-059663641d9f/resourceGroups/rg-prod-aks101-eus2-001/providers/Microsoft.Network/applicationGateways/agw-main-prod-eus2-001/frontendIPConfigurations/appGwPublicFrontendIp",
                "name": "appGwPublicFrontendIp",
                "private_ip_address": "",
                "private_ip_address_allocation": "Dynamic",
                "private_link_configuration_id": "",
                "private_link_configuration_name": "",
                "public_ip_address_id": "/subscriptions/b2af20ad-98fa-4aa7-94c3-059663641d9f/resourceGroups/rg-prod-aks101-eus2-001/providers/Microsoft.Network/publicIPAddresses/pip-agw-prod-eus2-001",
                "subnet_id": ""
              }
            ],
            "frontend_port": [
              {
                "id": "/subscriptions/b2af20ad-98fa-4aa7-94c3-059663641d9f/resourceGroups/rg-prod-aks101-eus2-001/providers/Microsoft.Network/applicationGateways/agw-main-prod-eus2-001/frontendPorts/port_443",
                "name": "port_443",
                "port": 443
              },
              {
                "id": "/subscriptions/b2af20ad-98fa-4aa7-94c3-059663641d9f/resourceGroups/rg-prod-aks101-eus2-001/providers/Microsoft.Network/applicationGateways/agw-main-prod-eus2-001/frontendPorts/port_80",
                "name": "port_80",
                "port": 80
              }
            ],
            "gateway_ip_configuration": [
              {
                "id": "/subscriptions/b2af20ad-98fa-4aa7-94c3-059663641d9f/resourceGroups/rg-prod-aks101-eus2-001/providers/Microsoft.Network/applicationGateways/agw-main-prod-eus2-001/gatewayIPConfigurations/appGatewayIpConfig",
                "name": "appGatewayIpConfig",
                "subnet_id": "/subscriptions/b2af20ad-98fa-4aa7-94c3-059663641d9f/resourceGroups/rg-prod-aks101-eus2-001/providers/Microsoft.Network/virtualNetworks/vnet-prod-aks101-eus2-001/subnets/snet-agw-prod-eus2-001"
              }
            ],
            "global": [],
            "http_listener": [
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/b2af20ad-98fa-4aa7-94c3-059663641d9f/resourceGroups/rg-prod-aks101-eus2-001/providers/Microsoft.Network/applicationGateways/agw-main-prod-eus2-001/frontendIPConfigurations/appGwPublicFrontendIp",
                "frontend_ip_configuration_name": "appGwPublicFrontendIp",
                "frontend_port_id": "/subscriptions/b2af20ad-98fa-4aa7-94c3-059663641d9f/resourceGroups/rg-prod-aks101-eus2-001/providers/Microsoft.Network/applicationGateways/agw-main-prod-eus2-001/frontendPorts/port_443",
                "frontend_port_name": "port_443",
                "host_name": "",
                "host_names": [],
                "id": "/subscriptions/b2af20ad-98fa-4aa7-94c3-059663641d9f/resourceGroups/rg-prod-aks101-eus2-001/providers/Microsoft.Network/applicationGateways/agw-main-prod-eus2-001/httpListeners/appGwHttpsListener",
                "name": "appGwHttpsListener",
                "protocol": "Https",
                "require_sni": false,
                "ssl_certificate_id": "/subscriptions/b2af20ad-98fa-4aa7-94c3-059663641d9f/resourceGroups/rg-prod-aks101-eus2-001/providers/Microsoft.Network/applicationGateways/agw-main-prod-eus2-001/sslCertificates/app-gateway-ssl-cert",
                "ssl_certificate_name": "app-gateway-ssl-cert",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              },
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/b2af20ad-98fa-4aa7-94c3-059663641d9f/resourceGroups/rg-prod-aks101-eus2-001/providers/Microsoft.Network/applicationGateways/agw-main-prod-eus2-001/frontendIPConfigurations/appGwPublicFrontendIp",
                "frontend_ip_configuration_name": "appGwPublicFrontendIp",
                "frontend_port_id": "/subscriptions/b2af20ad-98fa-4aa7-94c3-059663641d9f/resourceGroups/rg-prod-aks101-eus2-001/providers/Microsoft.Network/applicationGateways/agw-main-prod-eus2-001/frontendPorts/port_80",
                "frontend_port_name": "port_80",
                "host_name": "",
                "host_names": [],
                "id": "/subscriptions/b2af20ad-98fa-4aa7-94c3-059663641d9f/resourceGroups/rg-prod-aks101-eus2-001/providers/Microsoft.Network/applicationGateways/agw-main-prod-eus2-001/httpListeners/appGwHttpListener",
                "name": "appGwHttpListener",
                "protocol": "Http",
                "require_sni": false,
                "ssl_certificate_id": "",
                "ssl_certificate_name": "",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              }
            ],
            "id": "/subscriptions/b2af20ad-98fa-4aa7-94c3-059663641d9f/resourceGroups/rg-prod-aks101-eus2-001/providers/Microsoft.Network/applicationGateways/agw-main-prod-eus2-001",
            "identity": [
              {
                "identity_ids": [
                  "/subscriptions/b2af20ad-98fa-4aa7-94c3-059663641d9f/resourceGroups/rg-prod-aks101-eus2-001/providers/Microsoft.ManagedIdentity/userAssignedIdentities/id-agw-prod-eus2-001"
                ],
                "principal_id": "",
                "tenant_id": "",
                "type": "UserAssigned"
              }
            ],
            "location": "eastus2",
            "name": "agw-main-prod-eus2-001",
            "private_endpoint_connection": [],
            "private_link_configuration": [],
            "probe": [
              {
                "host": "10.240.0.100",
                "id": "/subscriptions/b2af20ad-98fa-4aa7-94c3-059663641d9f/resourceGroups/rg-prod-aks101-eus2-001/providers/Microsoft.Network/applicationGateways/agw-main-prod-eus2-001/probes/nginx-health-probe",
                "interval": 30,
                "match": [
                  {
                    "body": "",
                    "status_code": [
                      "200"
                    ]
                  }
                ],
                "minimum_servers": 0,
                "name": "nginx-health-probe",
                "path": "/healthz",
                "pick_host_name_from_backend_http_settings": false,
                "port": 80,
                "protocol": "Http",
                "timeout": 20,
                "unhealthy_threshold": 3
              },
              {
                "host": "10.240.0.100",
                "id": "/subscriptions/b2af20ad-98fa-4aa7-94c3-059663641d9f/resourceGroups/rg-prod-aks101-eus2-001/providers/Microsoft.Network/applicationGateways/agw-main-prod-eus2-001/probes/nginx-health-probe-https",
                "interval": 30,
                "match": [
                  {
                    "body": "",
                    "status_code": [
                      "200"
                    ]
                  }
                ],
                "minimum_servers": 0,
                "name": "nginx-health-probe-https",
                "path": "/healthz",
                "pick_host_name_from_backend_http_settings": false,
                "port": 443,
                "protocol": "Https",
                "timeout": 20,
                "unhealthy_threshold": 3
              }
            ],
            "redirect_configuration": [
              {
                "id": "/subscriptions/b2af20ad-98fa-4aa7-94c3-059663641d9f/resourceGroups/rg-prod-aks101-eus2-001/providers/Microsoft.Network/applicationGateways/agw-main-prod-eus2-001/redirectConfigurations/http-to-https-redirect",
                "include_path": true,
                "include_query_string": true,
                "name": "http-to-https-redirect",
                "redirect_type": "Permanent",
                "target_listener_id": "/subscriptions/b2af20ad-98fa-4aa7-94c3-059663641d9f/resourceGroups/rg-prod-aks101-eus2-001/providers/Microsoft.Network/applicationGateways/agw-main-prod-eus2-001/httpListeners/appGwHttpsListener",
                "target_listener_name": "appGwHttpsListener",
                "target_url": ""
              }
            ],
            "request_routing_rule": [
              {
                "backend_address_pool_id": "",
                "backend_address_pool_name": "",
                "backend_http_settings_id": "",
                "backend_http_settings_name": "",
                "http_listener_id": "/subscriptions/b2af20ad-98fa-4aa7-94c3-059663641d9f/resourceGroups/rg-prod-aks101-eus2-001/providers/Microsoft.Network/applicationGateways/agw-main-prod-eus2-001/httpListeners/appGwHttpListener",
                "http_listener_name": "appGwHttpListener",
                "id": "/subscriptions/b2af20ad-98fa-4aa7-94c3-059663641d9f/resourceGroups/rg-prod-aks101-eus2-001/providers/Microsoft.Network/applicationGateways/agw-main-prod-eus2-001/requestRoutingRules/http-redirect-rule",
                "name": "http-redirect-rule",
                "priority": 100,
                "redirect_configuration_id": "/subscriptions/b2af20ad-98fa-4aa7-94c3-059663641d9f/resourceGroups/rg-prod-aks101-eus2-001/providers/Microsoft.Network/applicationGateways/agw-main-prod-eus2-001/redirectConfigurations/http-to-https-redirect",
                "redirect_configuration_name": "http-to-https-redirect",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              },
              {
                "backend_address_pool_id": "/subscriptions/b2af20ad-98fa-4aa7-94c3-059663641d9f/resourceGroups/rg-prod-aks101-eus2-001/providers/Microsoft.Network/applicationGateways/agw-main-prod-eus2-001/backendAddressPools/nginx-backend-pool",
                "backend_address_pool_name": "nginx-backend-pool",
                "backend_http_settings_id": "/subscriptions/b2af20ad-98fa-4aa7-94c3-059663641d9f/resourceGroups/rg-prod-aks101-eus2-001/providers/Microsoft.Network/applicationGateways/agw-main-prod-eus2-001/backendHttpSettingsCollection/nginx-backend-https-settings",
                "backend_http_settings_name": "nginx-backend-https-settings",
                "http_listener_id": "/subscriptions/b2af20ad-98fa-4aa7-94c3-059663641d9f/resourceGroups/rg-prod-aks101-eus2-001/providers/Microsoft.Network/applicationGateways/agw-main-prod-eus2-001/httpListeners/appGwHttpsListener",
                "http_listener_name": "appGwHttpsListener",
                "id": "/subscriptions/b2af20ad-98fa-4aa7-94c3-059663641d9f/resourceGroups/rg-prod-aks101-eus2-001/providers/Microsoft.Network/applicationGateways/agw-main-prod-eus2-001/requestRoutingRules/https-routing-rule",
                "name": "https-routing-rule",
                "priority": 200,
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              }
            ],
            "resource_group_name": "rg-prod-aks101-eus2-001",
            "rewrite_rule_set": [],
            "sku": [
              {
                "capacity": 0,
                "name": "WAF_v2",
                "tier": "WAF_v2"
              }
            ],
            "ssl_certificate": [
              {
                "data": "MIIJUwIBAzCCCR8GCSqGSIb3DQEHAaCCCRAEggkMMIIJCDCCA78GCSqGSIb3DQEHBqCCA7AwggOsAgEAMIIDpQYJKoZIhvcNAQcBMBwGCiqGSIb3DQEMAQYwDgQInysdrPx8f2wCAggAgIIDeH4zXXAM58ZMp50BZ0jURVioSRl1u7GpqioYUopFOAkum/wVsWRaWxII0cp+uzgAc5OPs2FEicXM0KQbJdzuubh3rGb/Yi3rz3ovYBzNb1vZ5K2e1jfyYOWMSD8BneWADwuljHZciJHAwaXKsddkRU2+Cnm6OJ/btc+hFBtdgo/HqbAha3UQ4PvfzvzMw0cR+mfJMajWnIsrm58mteXfJjj0z0h8I1znr8d2z/PXJbOCJVtMjZQEOgn8buUhbGWql6NKs/1MeGWy0U4yFT4pY7dOW50SuU6rnMpZ32JxvhHxBanD0fBZq+766YMddkEmGfbyn3OMgz9 [...]
                "id": "/subscriptions/b2af20ad-98fa-4aa7-94c3-059663641d9f/resourceGroups/rg-prod-aks101-eus2-001/providers/Microsoft.Network/applicationGateways/agw-main-prod-eus2-001/sslCertificates/app-gateway-ssl-cert",
                "key_vault_secret_id": "",
                "name": "app-gateway-ssl-cert",
                "password": "demo123!",
                "public_cert_data": "MIIDRwYJKoZIhvcNAQcCoIIDODCCAzQCAQExADALBgkqhkiG9w0BBwGgggMcMIIDGDCCAgCgAwIBAgIRANpGIzAbB4/kNOyAirAXpqwwDQYJKoZIhvcNAQELBQAwLDERMA8GA1UEChMIQUtTIERlbW8xFzAVBgNVBAMTDmFrcy1kZW1vLmxvY2FsMB4XDTI1MDcyMDIwMDQyMFoXDTI2MDcyMDIwMDQyMFowLDERMA8GA1UEChMIQUtTIERlbW8xFzAVBgNVBAMTDmFrcy1kZW1vLmxvY2FsMIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAz8e87+bmtU1K5BtERMJIdiyE/H7bCQCzTCr2s1oWNf/uiuu2BUOsmWAtigNCAfUSErCrvEBdEgOLX9XnTnTucvFoDRReeyS8l2rcBeDA8FDbxyWm7i+kieE5WXVU/Q2tPF2 [...]
              }
            ],
            "ssl_policy": [
              {
                "cipher_suites": [],
                "disabled_protocols": [],
                "min_protocol_version": "",
                "policy_name": "AppGwSslPolicy20220101",
                "policy_type": "Predefined"
              }
            ],
            "ssl_profile": [],
            "tags": {
              "Demo": "true",
              "Environment": "prod",
              "Location": "East US 2",
              "ManagedBy": "terraform",
              "Owner": "anbossar",
              "Project": "aks101"
            },
            "timeouts": null,
            "trusted_client_certificate": [],
            "trusted_root_certificate": [],
            "url_path_map": [],
            "waf_configuration": [
              {
                "disabled_rule_group": [],
                "enabled": true,
                "exclusion": [],
                "file_upload_limit_mb": 100,
                "firewall_mode": "Prevention",
                "max_request_body_size_kb": 128,
                "request_body_check": true,
                "rule_set_type": "OWASP",
                "rule_set_version": "3.2"
              }
            ],
            "zones": [
              "1"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ssl_certificate"
              }
            ]
          ],
          "identity_schema_version": 0,
          "identity": {
            "name": "agw-main-prod-eus2-001",
            "resource_group_name": "rg-prod-aks101-eus2-001",
            "subscription_id": "b2af20ad-98fa-4aa7-94c3-059663641d9f"
          },
          "dependencies": [
            "azurerm_public_ip.app_gateway",
            "azurerm_resource_group.main",
            "azurerm_subnet.app_gateway",
            "azurerm_user_assigned_identity.app_gateway",
            "azurerm_virtual_network.main",
            "pkcs12_from_pem.app_gateway",
            "tls_private_key.app_gateway",
            "tls_self_signed_cert.app_gateway"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_firewall_policy",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_learn_private_ranges_enabled": false,
            "base_policy_id": "",
            "child_policies": [],
            "dns": [
              {
                "proxy_enabled": true,
                "servers": []
              }
            ],
            "explicit_proxy": [],
            "firewalls": [
              "/subscriptions/b2af20ad-98fa-4aa7-94c3-059663641d9f/resourceGroups/rg-prod-aks101-eus2-001/providers/Microsoft.Network/azureFirewalls/fw-hub-prod-eus2-001"
            ],
            "id": "/subscriptions/b2af20ad-98fa-4aa7-94c3-059663641d9f/resourceGroups/rg-prod-aks101-eus2-001/providers/Microsoft.Network/firewallPolicies/fwpol-main-prod-eus2-001",
            "identity": [],
            "insights": [],
            "intrusion_detection": [],
            "location": "eastus2",
            "name": "fwpol-main-prod-eus2-001",
            "private_ip_ranges": [],
            "resource_group_name": "rg-prod-aks101-eus2-001",
            "rule_collection_groups": [
              "/subscriptions/b2af20ad-98fa-4aa7-94c3-059663641d9f/resourceGroups/rg-prod-aks101-eus2-001/providers/Microsoft.Network/firewallPolicies/fwpol-main-prod-eus2-001/ruleCollectionGroups/aks-egress-rules"
            ],
            "sku": "Standard",
            "sql_redirect_allowed": null,
            "tags": {
              "Demo": "true",
              "Environment": "prod",
              "Location": "East US 2",
              "ManagedBy": "terraform",
              "Owner": "anbossar",
              "Project": "aks101"
            },
            "threat_intelligence_allowlist": [],
            "threat_intelligence_mode": "Alert",
            "timeouts": null,
            "tls_certificate": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "fwpol-main-prod-eus2-001",
            "resource_group_name": "rg-prod-aks101-eus2-001",
            "subscription_id": "b2af20ad-98fa-4aa7-94c3-059663641d9f"
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_firewall_policy_rule_collection_group",
      "name": "aks_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "application_rule_collection": [
              {
                "action": "Allow",
                "name": "aks-fqdn-rules",
                "priority": 100,
                "rule": [
                  {
                    "description": "",
                    "destination_addresses": [],
                    "destination_fqdn_tags": [],
                    "destination_fqdns": [
                      "*.hcp.eus2.azmk8s.io",
                      "mcr.microsoft.com",
                      "*.data.mcr.microsoft.com",
                      "management.azure.com",
                      "login.microsoftonline.com",
                      "packages.microsoft.com",
                      "acs-mirror.azureedge.net",
                      "packages.aks.azure.com",
                      "security.ubuntu.com",
                      "azure.archive.ubuntu.com",
                      "changelogs.ubuntu.com",
                      "*.docker.io",
                      "*.docker.com",
                      "registry-1.docker.io",
                      "auth.docker.io",
                      "production.cloudflare.docker.com",
                      "ghcr.io",
                      "pkg-containers.githubusercontent.com"
                    ],
                    "destination_urls": [],
                    "http_headers": [],
                    "name": "aks-core-dependencies",
                    "protocols": [
                      {
                        "port": 443,
                        "type": "Https"
                      },
                      {
                        "port": 80,
                        "type": "Http"
                      }
                    ],
                    "source_addresses": [
                      "10.240.0.0/24"
                    ],
                    "source_ip_groups": [],
                    "terminate_tls": false,
                    "web_categories": []
                  },
                  {
                    "description": "",
                    "destination_addresses": [],
                    "destination_fqdn_tags": [],
                    "destination_fqdns": [
                      "dc.services.visualstudio.com",
                      "*.ods.opinsights.azure.com",
                      "*.oms.opinsights.azure.com",
                      "*.monitoring.azure.com"
                    ],
                    "destination_urls": [],
                    "http_headers": [],
                    "name": "azure-monitor",
                    "protocols": [
                      {
                        "port": 443,
                        "type": "Https"
                      }
                    ],
                    "source_addresses": [
                      "10.240.0.0/24"
                    ],
                    "source_ip_groups": [],
                    "terminate_tls": false,
                    "web_categories": []
                  }
                ]
              }
            ],
            "firewall_policy_id": "/subscriptions/b2af20ad-98fa-4aa7-94c3-059663641d9f/resourceGroups/rg-prod-aks101-eus2-001/providers/Microsoft.Network/firewallPolicies/fwpol-main-prod-eus2-001",
            "id": "/subscriptions/b2af20ad-98fa-4aa7-94c3-059663641d9f/resourceGroups/rg-prod-aks101-eus2-001/providers/Microsoft.Network/firewallPolicies/fwpol-main-prod-eus2-001/ruleCollectionGroups/aks-egress-rules",
            "name": "aks-egress-rules",
            "nat_rule_collection": [],
            "network_rule_collection": [
              {
                "action": "Allow",
                "name": "aks-network-rules",
                "priority": 200,
                "rule": [
                  {
                    "description": "",
                    "destination_addresses": [
                      "AzureCloud.East US 2"
                    ],
                    "destination_fqdns": [],
                    "destination_ip_groups": [],
                    "destination_ports": [
                      "9000",
                      "443"
                    ],
                    "name": "aks-tcp-ports",
                    "protocols": [
                      "TCP"
                    ],
                    "source_addresses": [
                      "10.240.0.0/24"
                    ],
                    "source_ip_groups": []
                  },
                  {
                    "description": "",
                    "destination_addresses": [
                      "AzureCloud.East US 2"
                    ],
                    "destination_fqdns": [],
                    "destination_ip_groups": [],
                    "destination_ports": [
                      "1194",
                      "123"
                    ],
                    "name": "aks-udp-ports",
                    "protocols": [
                      "UDP"
                    ],
                    "source_addresses": [
                      "10.240.0.0/24"
                    ],
                    "source_ip_groups": []
                  },
                  {
                    "description": "",
                    "destination_addresses": [
                      "*"
                    ],
                    "destination_fqdns": [],
                    "destination_ip_groups": [],
                    "destination_ports": [
                      "123"
                    ],
                    "name": "ntp-time-sync",
                    "protocols": [
                      "UDP"
                    ],
                    "source_addresses": [
                      "10.240.0.0/24"
                    ],
                    "source_ip_groups": []
                  }
                ]
              }
            ],
            "priority": 100,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_firewall_policy.main",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "aks",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b2af20ad-98fa-4aa7-94c3-059663641d9f/resourceGroups/rg-prod-aks101-eus2-001/providers/Microsoft.Network/networkSecurityGroups/nsg-aks-prod-eus2-001",
            "location": "eastus2",
            "name": "nsg-aks-prod-eus2-001",
            "resource_group_name": "rg-prod-aks101-eus2-001",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.240.0.0/24",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "443",
                  "80"
                ],
                "direction": "Inbound",
                "name": "AllowAppGatewayInbound",
                "priority": 1000,
                "protocol": "Tcp",
                "source_address_prefix": "10.240.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "Internet",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "AllowInternetOutbound",
                "priority": 1000,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowVnetInbound",
                "priority": 1100,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "AllowVnetOutbound",
                "priority": 1100,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Demo": "true",
              "Environment": "prod",
              "Location": "East US 2",
              "ManagedBy": "terraform",
              "Owner": "anbossar",
              "Project": "aks101"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "nsg-aks-prod-eus2-001",
            "resource_group_name": "rg-prod-aks101-eus2-001",
            "subscription_id": "b2af20ad-98fa-4aa7-94c3-059663641d9f"
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "app_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b2af20ad-98fa-4aa7-94c3-059663641d9f/resourceGroups/rg-prod-aks101-eus2-001/providers/Microsoft.Network/networkSecurityGroups/nsg-agw-prod-eus2-001",
            "location": "eastus2",
            "name": "nsg-agw-prod-eus2-001",
            "resource_group_name": "rg-prod-aks101-eus2-001",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "443",
                  "80"
                ],
                "direction": "Inbound",
                "name": "AllowHttpsInbound",
                "priority": 1000,
                "protocol": "Tcp",
                "source_address_prefix": "Internet",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "65200-65535",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowGatewayManager",
                "priority": 1100,
                "protocol": "Tcp",
                "source_address_prefix": "GatewayManager",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.240.0.0/24",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "443",
                  "80"
                ],
                "direction": "Outbound",
                "name": "AllowAksOutbound",
                "priority": 1000,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "Internet",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "AllowInternetOutbound",
                "priority": 1100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Demo": "true",
              "Environment": "prod",
              "Location": "East US 2",
              "ManagedBy": "terraform",
              "Owner": "anbossar",
              "Project": "aks101"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "nsg-agw-prod-eus2-001",
            "resource_group_name": "rg-prod-aks101-eus2-001",
            "subscription_id": "b2af20ad-98fa-4aa7-94c3-059663641d9f"
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "private_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b2af20ad-98fa-4aa7-94c3-059663641d9f/resourceGroups/rg-prod-aks101-eus2-001/providers/Microsoft.Network/networkSecurityGroups/nsg-pe-prod-eus2-001",
            "location": "eastus2",
            "name": "nsg-pe-prod-eus2-001",
            "resource_group_name": "rg-prod-aks101-eus2-001",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "1433",
                  "443"
                ],
                "direction": "Inbound",
                "name": "AllowVnetInbound",
                "priority": 1000,
                "protocol": "Tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "DenyAllInbound",
                "priority": 4000,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Demo": "true",
              "Environment": "prod",
              "Location": "East US 2",
              "ManagedBy": "terraform",
              "Owner": "anbossar",
              "Project": "aks101"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "nsg-pe-prod-eus2-001",
            "resource_group_name": "rg-prod-aks101-eus2-001",
            "subscription_id": "b2af20ad-98fa-4aa7-94c3-059663641d9f"
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "app_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/b2af20ad-98fa-4aa7-94c3-059663641d9f/resourceGroups/rg-prod-aks101-eus2-001/providers/Microsoft.Network/publicIPAddresses/pip-agw-prod-eus2-001",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.210.248.180",
            "ip_version": "IPv4",
            "location": "eastus2",
            "name": "pip-agw-prod-eus2-001",
            "resource_group_name": "rg-prod-aks101-eus2-001",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "Demo": "true",
              "Environment": "prod",
              "Location": "East US 2",
              "ManagedBy": "terraform",
              "Owner": "anbossar",
              "Project": "aks101"
            },
            "zones": [
              "1"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/b2af20ad-98fa-4aa7-94c3-059663641d9f/resourceGroups/rg-prod-aks101-eus2-001/providers/Microsoft.Network/publicIPAddresses/pip-fw-prod-eus2-001",
            "idle_timeout_in_minutes": 4,
            "ip_address": "132.196.209.195",
            "ip_version": "IPv4",
            "location": "eastus2",
            "name": "pip-fw-prod-eus2-001",
            "resource_group_name": "rg-prod-aks101-eus2-001",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "Demo": "true",
              "Environment": "prod",
              "Location": "East US 2",
              "ManagedBy": "terraform",
              "Owner": "anbossar",
              "Project": "aks101"
            },
            "zones": [
              "1",
              "2",
              "3"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "aks_routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp_route_propagation_enabled": true,
            "id": "/subscriptions/b2af20ad-98fa-4aa7-94c3-059663641d9f/resourceGroups/rg-prod-aks101-eus2-001/providers/Microsoft.Network/routeTables/rt-fw-prod-eus2-001",
            "location": "eastus2",
            "name": "rt-fw-prod-eus2-001",
            "resource_group_name": "rg-prod-aks101-eus2-001",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "default-via-firewall",
                "next_hop_in_ip_address": "10.240.2.4",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [
              "/subscriptions/b2af20ad-98fa-4aa7-94c3-059663641d9f/resourceGroups/rg-prod-aks101-eus2-001/providers/Microsoft.Network/virtualNetworks/vnet-prod-aks101-eus2-001/subnets/snet-aks-prod-eus2-001"
            ],
            "tags": {
              "Demo": "true",
              "Environment": "prod",
              "Location": "East US 2",
              "ManagedBy": "terraform",
              "Owner": "anbossar",
              "Project": "aks101"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "rt-fw-prod-eus2-001",
            "resource_group_name": "rg-prod-aks101-eus2-001",
            "subscription_id": "b2af20ad-98fa-4aa7-94c3-059663641d9f"
          },
          "dependencies": [
            "azurerm_firewall.main",
            "azurerm_firewall_policy.main",
            "azurerm_public_ip.firewall",
            "azurerm_resource_group.main",
            "azurerm_subnet.firewall",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "aks",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.240.0.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/b2af20ad-98fa-4aa7-94c3-059663641d9f/resourceGroups/rg-prod-aks101-eus2-001/providers/Microsoft.Network/virtualNetworks/vnet-prod-aks101-eus2-001/subnets/snet-aks-prod-eus2-001",
            "name": "snet-aks-prod-eus2-001",
            "private_endpoint_network_policies": "Enabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-prod-aks101-eus2-001",
            "virtual_network_name": "vnet-prod-aks101-eus2-001"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "snet-aks-prod-eus2-001",
            "resource_group_name": "rg-prod-aks101-eus2-001",
            "subscription_id": "b2af20ad-98fa-4aa7-94c3-059663641d9f",
            "virtual_network_name": "vnet-prod-aks101-eus2-001"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "app_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.240.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/b2af20ad-98fa-4aa7-94c3-059663641d9f/resourceGroups/rg-prod-aks101-eus2-001/providers/Microsoft.Network/virtualNetworks/vnet-prod-aks101-eus2-001/subnets/snet-agw-prod-eus2-001",
            "name": "snet-agw-prod-eus2-001",
            "private_endpoint_network_policies": "Enabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-prod-aks101-eus2-001",
            "virtual_network_name": "vnet-prod-aks101-eus2-001"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "snet-agw-prod-eus2-001",
            "resource_group_name": "rg-prod-aks101-eus2-001",
            "subscription_id": "b2af20ad-98fa-4aa7-94c3-059663641d9f",
            "virtual_network_name": "vnet-prod-aks101-eus2-001"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.240.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/b2af20ad-98fa-4aa7-94c3-059663641d9f/resourceGroups/rg-prod-aks101-eus2-001/providers/Microsoft.Network/virtualNetworks/vnet-prod-aks101-eus2-001/subnets/AzureFirewallSubnet",
            "name": "AzureFirewallSubnet",
            "private_endpoint_network_policies": "Enabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-prod-aks101-eus2-001",
            "virtual_network_name": "vnet-prod-aks101-eus2-001"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "AzureFirewallSubnet",
            "resource_group_name": "rg-prod-aks101-eus2-001",
            "subscription_id": "b2af20ad-98fa-4aa7-94c3-059663641d9f",
            "virtual_network_name": "vnet-prod-aks101-eus2-001"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "private_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.240.3.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/b2af20ad-98fa-4aa7-94c3-059663641d9f/resourceGroups/rg-prod-aks101-eus2-001/providers/Microsoft.Network/virtualNetworks/vnet-prod-aks101-eus2-001/subnets/snet-pe-prod-eus2-001",
            "name": "snet-pe-prod-eus2-001",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-prod-aks101-eus2-001",
            "virtual_network_name": "vnet-prod-aks101-eus2-001"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "snet-pe-prod-eus2-001",
            "resource_group_name": "rg-prod-aks101-eus2-001",
            "subscription_id": "b2af20ad-98fa-4aa7-94c3-059663641d9f",
            "virtual_network_name": "vnet-prod-aks101-eus2-001"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "aks",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b2af20ad-98fa-4aa7-94c3-059663641d9f/resourceGroups/rg-prod-aks101-eus2-001/providers/Microsoft.Network/virtualNetworks/vnet-prod-aks101-eus2-001/subnets/snet-aks-prod-eus2-001",
            "network_security_group_id": "/subscriptions/b2af20ad-98fa-4aa7-94c3-059663641d9f/resourceGroups/rg-prod-aks101-eus2-001/providers/Microsoft.Network/networkSecurityGroups/nsg-aks-prod-eus2-001",
            "subnet_id": "/subscriptions/b2af20ad-98fa-4aa7-94c3-059663641d9f/resourceGroups/rg-prod-aks101-eus2-001/providers/Microsoft.Network/virtualNetworks/vnet-prod-aks101-eus2-001/subnets/snet-aks-prod-eus2-001"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.aks",
            "azurerm_resource_group.main",
            "azurerm_subnet.aks",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "app_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b2af20ad-98fa-4aa7-94c3-059663641d9f/resourceGroups/rg-prod-aks101-eus2-001/providers/Microsoft.Network/virtualNetworks/vnet-prod-aks101-eus2-001/subnets/snet-agw-prod-eus2-001",
            "network_security_group_id": "/subscriptions/b2af20ad-98fa-4aa7-94c3-059663641d9f/resourceGroups/rg-prod-aks101-eus2-001/providers/Microsoft.Network/networkSecurityGroups/nsg-agw-prod-eus2-001",
            "subnet_id": "/subscriptions/b2af20ad-98fa-4aa7-94c3-059663641d9f/resourceGroups/rg-prod-aks101-eus2-001/providers/Microsoft.Network/virtualNetworks/vnet-prod-aks101-eus2-001/subnets/snet-agw-prod-eus2-001"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.app_gateway",
            "azurerm_resource_group.main",
            "azurerm_subnet.app_gateway",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "private_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b2af20ad-98fa-4aa7-94c3-059663641d9f/resourceGroups/rg-prod-aks101-eus2-001/providers/Microsoft.Network/virtualNetworks/vnet-prod-aks101-eus2-001/subnets/snet-pe-prod-eus2-001",
            "network_security_group_id": "/subscriptions/b2af20ad-98fa-4aa7-94c3-059663641d9f/resourceGroups/rg-prod-aks101-eus2-001/providers/Microsoft.Network/networkSecurityGroups/nsg-pe-prod-eus2-001",
            "subnet_id": "/subscriptions/b2af20ad-98fa-4aa7-94c3-059663641d9f/resourceGroups/rg-prod-aks101-eus2-001/providers/Microsoft.Network/virtualNetworks/vnet-prod-aks101-eus2-001/subnets/snet-pe-prod-eus2-001"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.private_endpoints",
            "azurerm_resource_group.main",
            "azurerm_subnet.private_endpoints",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "aks_routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b2af20ad-98fa-4aa7-94c3-059663641d9f/resourceGroups/rg-prod-aks101-eus2-001/providers/Microsoft.Network/virtualNetworks/vnet-prod-aks101-eus2-001/subnets/snet-aks-prod-eus2-001",
            "route_table_id": "/subscriptions/b2af20ad-98fa-4aa7-94c3-059663641d9f/resourceGroups/rg-prod-aks101-eus2-001/providers/Microsoft.Network/routeTables/rt-fw-prod-eus2-001",
            "subnet_id": "/subscriptions/b2af20ad-98fa-4aa7-94c3-059663641d9f/resourceGroups/rg-prod-aks101-eus2-001/providers/Microsoft.Network/virtualNetworks/vnet-prod-aks101-eus2-001/subnets/snet-aks-prod-eus2-001"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_firewall.main",
            "azurerm_firewall_policy.main",
            "azurerm_public_ip.firewall",
            "azurerm_resource_group.main",
            "azurerm_route_table.aks_routes",
            "azurerm_subnet.aks",
            "azurerm_subnet.firewall",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.240.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "a729e5e4-9579-4662-a14e-263de89c94c2",
            "id": "/subscriptions/b2af20ad-98fa-4aa7-94c3-059663641d9f/resourceGroups/rg-prod-aks101-eus2-001/providers/Microsoft.Network/virtualNetworks/vnet-prod-aks101-eus2-001",
            "location": "eastus2",
            "name": "vnet-prod-aks101-eus2-001",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "rg-prod-aks101-eus2-001",
            "subnet": [
              {
                "address_prefixes": [
                  "10.240.0.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/b2af20ad-98fa-4aa7-94c3-059663641d9f/resourceGroups/rg-prod-aks101-eus2-001/providers/Microsoft.Network/virtualNetworks/vnet-prod-aks101-eus2-001/subnets/snet-aks-prod-eus2-001",
                "name": "snet-aks-prod-eus2-001",
                "private_endpoint_network_policies": "Enabled",
                "private_link_service_network_policies_enabled": true,
                "route_table_id": "/subscriptions/b2af20ad-98fa-4aa7-94c3-059663641d9f/resourceGroups/rg-prod-aks101-eus2-001/providers/Microsoft.Network/routeTables/rt-fw-prod-eus2-001",
                "security_group": "/subscriptions/b2af20ad-98fa-4aa7-94c3-059663641d9f/resourceGroups/rg-prod-aks101-eus2-001/providers/Microsoft.Network/networkSecurityGroups/nsg-aks-prod-eus2-001"
              },
              {
                "address_prefixes": [
                  "10.240.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/b2af20ad-98fa-4aa7-94c3-059663641d9f/resourceGroups/rg-prod-aks101-eus2-001/providers/Microsoft.Network/virtualNetworks/vnet-prod-aks101-eus2-001/subnets/snet-agw-prod-eus2-001",
                "name": "snet-agw-prod-eus2-001",
                "private_endpoint_network_policies": "Enabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/b2af20ad-98fa-4aa7-94c3-059663641d9f/resourceGroups/rg-prod-aks101-eus2-001/providers/Microsoft.Network/networkSecurityGroups/nsg-agw-prod-eus2-001"
              },
              {
                "address_prefixes": [
                  "10.240.2.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/b2af20ad-98fa-4aa7-94c3-059663641d9f/resourceGroups/rg-prod-aks101-eus2-001/providers/Microsoft.Network/virtualNetworks/vnet-prod-aks101-eus2-001/subnets/AzureFirewallSubnet",
                "name": "AzureFirewallSubnet",
                "private_endpoint_network_policies": "Enabled",
                "private_link_service_network_policies_enabled": true
              },
              {
                "address_prefixes": [
                  "10.240.3.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/b2af20ad-98fa-4aa7-94c3-059663641d9f/resourceGroups/rg-prod-aks101-eus2-001/providers/Microsoft.Network/virtualNetworks/vnet-prod-aks101-eus2-001/subnets/snet-pe-prod-eus2-001",
                "name": "snet-pe-prod-eus2-001",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/b2af20ad-98fa-4aa7-94c3-059663641d9f/resourceGroups/rg-prod-aks101-eus2-001/providers/Microsoft.Network/networkSecurityGroups/nsg-pe-prod-eus2-001"
              }
            ],
            "tags": {
              "Demo": "true",
              "Environment": "prod",
              "Location": "East US 2",
              "ManagedBy": "terraform",
              "Owner": "anbossar",
              "Project": "aks101"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "vnet-prod-aks101-eus2-001",
            "resource_group_name": "rg-prod-aks101-eus2-001",
            "subscription_id": "b2af20ad-98fa-4aa7-94c3-059663641d9f"
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    }
  ]
}